<resources>
    <string name="app_name">ezSend</string>
    <string name="title_activity_droppoint2">Map</string>
    <string name="cara_mengirim_paket">Cara Mengirim Paket?</string>
    <string name="paket_saya_sudah_sampai_mana">Paket Saya Sudah Sampai Mana?</string>
    <string name="dimana_droppoint_terdekat">Dimana DropPoint Terdekat?</string>
    <string name="bantuan">BANTUAN</string>
    <string name="tidak_menemukan_solusi_untuk_masalah_anda_n_anda_dapat_menghubungi_call_center_kami">Tidak menemukan solusi untuk masalah anda?  anda dapat menghubungi call center kami.</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="todo">TODO</string>
    <string name="jawaban2">Seperti halnya cek resi lewat web, aplikasi ini juga menawarkan kemudahan dan kecepatan dalam mengecek status resi. Cukup input nomor resi, maka Anda bisa langsung mengetahui keberadaan paket yang dikirim tanpa perlu menentukan pilihan ekspedisi yang digunakan.</string>
    <string name="jawaban3">1.Pastikan kembali nomor resi yang Anda cek sudah benar. Setiap ekspedisi pengiriman memiliki format resi (airwaybill) yang berbeda-beda. Dalam banyak kasus, kesalahan input no resi merupakan penyebab utama gagalnya pengecekan status paket.
                    \n\n2.Jika Anda menerima kiriman dari pihak lain, pastikan kembali nomor resi yang Anda terima sudah benar. Anda bisa bertanya kembali kepada pihak pengirim paket untuk memastikan apakah no resi sudah benar.
                    \n\n3.Pastikan juga ekspedisi yang Anda gunakan untuk mengirim paket sudah bisa dicek.
                    \n\n4.Sebagian ekspedisi masih menggunakan pencatatan manual (sistemnya belum online) sehingga nomor resi Anda baru bisa dicek statusnya beberapa jam hingga satu hari sejak paket dikirim. Jadi silahkan cek resi kembali setelah satu hari paket dikirim.
                    \n\n5.Dalam beberapa kasus pengecekan gagal karena website ekspedisi sedang tidak bisa diakses. Jika hal ini terjadi Anda bisa cek resi beberapa waktu kemudian ketika web ekspedisi sudah online lagi.
                    \n\n6.Langkah terakhir, untuk memastikan Anda bisa langsung mengecek resi di masing-masing web ekspedisi.</string>
    <string-array name="android_dropdown_arrays">
        <item>Pilih Item</item>
        <item>YES</item>
        <item>OK</item>
        <item>KILAT</item>
        <item>EXPRESS</item>
    </string-array>
    <string-array name="android_cekharga">
        <item>Pilih Provinsi</item>
        <item>Jawa Tengah</item>
        <item>Jawa Barat</item>
        <item>Sumatera</item>
        <item>Kalimantan</item>
    </string-array>
    <string-array name="android_kurir">
        <item>Pilih Kurir</item>
        <item>TIKI</item>
        <item>JNE</item>
        <item>JNE</item>
        <item>Pos</item>
    </string-array>
    <string name="title_activity_droppoint">Map</string>
    <string name="title_activity_drop">Map</string>

    <!--aja diutak atik-->
    <string name="provinsi">Provinsi</string>
    <string name="kota">Kota</string>
    <string name="pilih_kota">Pilih Kota</string>
    <string name="cek_harga">Cek Tarif</string>
    <string name="pilih_provinsi">pilih provinsi</string>
    <string name="masukkan_alamat">Masukkan Alamat Asal Pengiriman</string>
    <string name="masukkan_tujuan">Masukkan Alamat Tujuan Pengiriman</string>
    <string name="ubah">Ubah</string>
    <string name="cek_tarif">Cek Tarif</string>
    <string name="berat_barang">Masukkan Berat Barang :</string>
    <string name="kg">Kg</string>
    <string name="pilih_kurir">Pilih Kurir</string>
    <string name="jne">JNE</string>
    <string name="pos">POS</string>
    <string name="tiki">TIKI</string>
    <string name="pilih">Pilih</string>
    <string name="cari">Cari</string>
    <string name="batal">Batal</string>
    <string name="pilihan">Pilihan</string>

</resources>
