<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="25dp"
    android:orientation="vertical"
    tools:context="com.ppl.ezsend.contactus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:srcCompat="@drawable/kontakkami"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#848080"
            android:layout_gravity="center_horizontal"
            android:text="Contact Us"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Apa itu Ez-Send ?"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="#000000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:paddingLeft="20dp"
                    android:text="adalah aplikasi logistik bebasis android."/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mengapa menggunakan Ez-Send ?"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:paddingLeft="20dp"
                    android:text="@string/jawaban2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gagal cek resi ?"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:paddingLeft="20dp"
                    android:text="@string/jawaban3"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="269dp"
            android:layout_height="39dp"
            android:layout_below="@+id/tiga"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/tidak_menemukan_solusi_untuk_masalah_anda_n_anda_dapat_menghubungi_call_center_kami"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/hubungikami"
                    android:textColor="#0000FF"
                    android:layout_marginVertical="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hubungi_kami"
                    android:layout_gravity="left"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <ImageButton
                    android:id="@+id/use"
                    android:layout_gravity="right"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/phone"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
